--- a/tools/price-win.html
+++ b/tools/price-win.html
@@ -85,7 +85,7 @@
             })
                 .then(response => {
                     if (!response.ok) {
-                        console.error("did not succedded", response)
+                        console.error("did not succeeded", response)
                         return
                     }
                     alert("comment added")
