--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/gowasp.webp">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to GOwasp</title>
   </head>
